Attempt to fix IE10 mobile prism wrapping

--- a/assets/css/docs.css
+++ b/assets/css/docs.css
@@ -162,3 +162,20 @@ header[role="banner"] span {
     height: 246px;
     width: 288px;
 }
+
+/*
+ * Force the spans to break words on the pre tag
+ */
+pre span {
+    -ms-word-break: break-all;
+    word-break: break-all;
+    /*Non standard for webkit*/
+    word-break: break-word;
+    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
+    hyphens: auto;
+    /*Internet Explorer 5.5+*/
+    word-wrap: break-word;
+    /*new syntax*/
+    overflow-wrap: break-word;
+}
